# nighttrade

./: .env.example  .gitignore  CLAUDE.md  Makefile  PLAN.md  README.md  pyproject.toml
configs/: default.yaml  watchlist.yaml
deploy/: install.sh  sync.sh  uninstall.sh  watchdog.sh
docs/: DEPLOY.md  REAL-MONEY-RISKS.md  SAFETY.md  STRATEGY.md  WIDGET.md  lint-baseline.md
docs/adr/: 0001-alerts-routed-to-alerts-table.md  0002-bot-runs-pid-liveness-and-heartbeat-self-heal.md  0003-recent-errors-default-filter.md  0004-prune-old-on-day-rollover.md  0005-yfinance-threads-cap.md  0006-retry-on-sqlite-locked.md  0007-market-hours-aware-idle.md
src/nighttrade/: __init__.py  __main__.py  approval.py  demo.py  market_hours.py  pipeline.py  runtime.py
src/nighttrade/accounting/: ledger.py  tax.py
src/nighttrade/backtest/: engine.py
src/nighttrade/cli/: main.py
src/nighttrade/config/: __init__.py  loader.py  schema.py
src/nighttrade/cross_section/: __init__.py  factors.py  ranker.py
src/nighttrade/dashboard/: app.py  data.py  tailnet_middleware.py
src/nighttrade/exchanges/: __init__.py  base.py  consensus.py  credentials.py  mock.py  provider.py  public.py  sandbox.py
src/nighttrade/features/: pipeline.py
src/nighttrade/fusion/: engine.py
src/nighttrade/gates/: __init__.py  calibration.py  decision.py  meta.py  regime.py
src/nighttrade/indicators/: core.py  engine.py  frame.py
tests/: conftest.py  test_accounting.py  test_api_keys.py  test_backtest.py  test_config.py  test_cross_section.py  test_dashboard.py  test_dashboard_tailnet_middleware.py  test_db_batch.py  test_db_retry_on_locked.py  test_demo.py  test_exchanges.py  test_features.py  test_fusion.py  test_gates.py  test_indicators.py  test_instance_lock.py  test_killswitch.py  test_leakage.py  test_learning.py  test_live_feed_dynamic_pruning.py  test_live_feed_parallel_fetch.py  test_live_feed_threads_invariant.py  test_macro.py  test_market_hours_warm_decision.py  test_microstructure.py  test_ml.py  test_models.py  test_notify.py  test_observatory.py  test_observer_cycle_interval.py  test_observer_market_hours.py  test_observer_memory_rotation.py  test_order_ids.py  test_paper.py  test_qa_crit1_price_fetch_resilience.py  test_qa_crit2_minute_cache_bound.py  test_qa_crit3_log_rotation.py  test_qa_crit4_consecutive_failures.py  test_qa_high_misc.py  (+7 more)
(+56 files in other folders)
